Add tablet view with media querys

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="nav">.nav</nav>
       <span class="social">.social</span>
     </div>
-    <h1 class="header-banner">.banner</h1>
+    <div class="header-banner">.banner</div>
   </header>
   <main class="main">
     <section class="section">
