Add animation to logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="header-container">
-      <span class="logo">.logo</span>
+      <span id="logo" class="logo">.logo</span>
       <nav class="nav">.nav</nav>
       <span class="social">.social</span>
     </div>
